--- a/custom-css/style.css
+++ b/custom-css/style.css
@@ -1,4 +1,15 @@
+body{
+    max-width: 80%;
+    margin: 0 auto;
+}
+
 h1{
     font-size: 50px;
     text-align: center;
+}
+.image{
+    text-align: center;
+}
+.image img{
+    width: 50%;
 }
