--- a/custom-css/style.css
+++ b/custom-css/style.css
@@ -26,6 +26,6 @@ h1{
     font-size: 20px;
     padding: 10px 35px;
 }
-/* .button:hover{
+.button:hover{
     background-color: rgba(0, 0, 255, 0.883);
-} */
+}
